--- a/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
+++ b/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
@@ -27,8 +27,7 @@
     <label>INTEX:</label>
     <input id="intex" asp-for="Intex" /><br />
 
-    <label>Final Grade:</label>
-    <h1 id="finalGrade" ></h1>
+    <label id="finalGrade"></label>
     <br />
 
     <input id="btnSend" type="button" value="Submit" /><br />
