--- a/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
+++ b/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
@@ -7,7 +7,7 @@
 @model GradeCalculatorModel;
 
 <!--Form takes grade inputs and sends them to Grades.js-->
-<h2>Grade Calculator</h2>
+<h2>Grade Calculator</h2>e
 <form>
     <label>Assignments:</label>
     <input id="assignments" asp-for="Assignments" /><br />
