--- a/Mission4Assignment/Views/Shared/_Layout.cshtml
+++ b/Mission4Assignment/Views/Shared/_Layout.cshtml
@@ -18,10 +18,9 @@
         @RenderBody()
     </div>
 
-    <footer></footer>
-
     <script src="lib/bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <script src="lib/jquery/jquery-3.6.3.min.js"></script>
+    <script src="js/Grades.js"></script>
 
 </body>
 </html>
