--- a/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
+++ b/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
@@ -5,10 +5,9 @@
 }
 
 @model GradeCalculatorModel;
-
 <!--Form takes grade inputs and sends them to Grades.js-->
-<h2>Grade Calculator</h2>e
-<form>
+<h2>Grade Calculator</h2>
+<form method="post">
     <label>Assignments:</label>
     <input id="assignments" asp-for="Assignments" /><br />
 
@@ -37,3 +36,4 @@
 </form>
 
 <!--Link to js files-->
+<script src="js/Grades.js"></script>
