Fixed js and some other issues.

--- a/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
+++ b/Mission4Assignment/Views/Blah/GradeCalculator.cshtml
@@ -29,11 +29,8 @@
     <label id="finalGrade"></label>
     <br />
 
-    <input id="btnSend" type="button" value="Submit" /><br />
+    <button id="btnSend" type="submit">Submit</button><br />
 
     <div asp-validation-summary="All"></div>
 
 </form>
-
-<!--Link to js files-->
-<script src="js/Grades.js"></script>
