--- a/Mission4Assignment/Views/Shared/_Layout.cshtml
+++ b/Mission4Assignment/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
-    <link href="lib/bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/default.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/default.css" rel="stylesheet" />
 </head>
 <body>
     <nav>
@@ -18,8 +18,9 @@
         @RenderBody()
     </div>
 
-    <script src="lib/bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
-    <script src="lib/jquery/jquery-3.6.3.min.js"></script>
+    <script src="~/lib/bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery/jquery-3.6.3.min.js"></script>
+    <script src="~/js/Grades.js"></script>
 
 </body>
 </html>
