--- a/Mission4Assignment/Views/Blah/index.cshtml
+++ b/Mission4Assignment/Views/Blah/index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "My First Website!";
 }
 
-<!--Title, snowboarding picture, and other info-->
+<!--Title, snowboarding picture, and other info on the main page-->
 <h1>Josh</h1>
 <img id="snowbboarding" width="200" src="img/snowboarding.JPG" />
 <p>
