--- a/Mission4Assignment/Views/Shared/_Layout.cshtml
+++ b/Mission4Assignment/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<!-- This is the layout for all of my webpages, with a nav bar and a place to put body content. -->
+<!DOCTYPE html>
 
 <html>
 <head>
