--- a/Mission4Assignment/Views/_ViewImports.cshtml
+++ b/Mission4Assignment/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿<!-- Allows me to use tag helpers and more easily reference my models.-->
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Mission4Assignment.Models
